added downloaded fonts

--- a/public/fonts.css
+++ b/public/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Ubuntu';
+    font-family: 'Ubuntu-Reg';
     src: url('./fonts/Ubuntu-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
