--- a/public/fonts.css
+++ b/public/fonts.css
@@ -1,7 +1,7 @@
 @font-face {
-    font-family: 'Ubuntu-Reg';
+    font-family: 'Ubuntu';
     src: url('./fonts/Ubuntu-Regular.ttf') format('truetype');
-    font-weight: 400;
+    font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
@@ -9,7 +9,7 @@
 @font-face {
     font-family: 'Ubuntu';
     src: url('./fonts/Ubuntu-Bold.ttf') format('truetype');
-    font-weight: 400;
+    font-weight: 700;
     font-style: normal;
     font-display: swap;
 }
